# dominion-setup-counter

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  config.hpp  constrained_product_generator.hpp  main.cpp  math_utils.hpp  pim.cpp  sandbox.cpp  tuple_utils.hpp  vcpkg.json
card_data/: CMakeLists.txt
card_data/card_data/: combination_modifiers.hpp
card_data/card_data/extra_setup/: card_type.hpp  state.hpp
card_data/card_data/kingdom/: card_type.hpp  card_type_major_table.hpp  card_type_tally.hpp  membership_mask.hpp  venn_region.hpp
card_data/generator/: card_list.xlsx  config.json  config.py  generated_files.txt  kingdom_venn_region_data.py  log.py
card_data/generator/kingdom/: card_type_major_table.py  card_type_tally.py  membership_mask.py  venn_region.py
card_data/generator/templates/kingdom/: card_type_major_table.hpp  card_type_tally.hpp  membership_mask.hpp  venn_region.hpp
card_data/generator/util/: __init__.py  utils.py
card_lists/: CMakeLists.txt
card_lists/generator/: card_list.xlsx  code_generator_config.json  config_io.py  generated_files.txt  generator_amount_getter.py  generator_base.py  generator_card_amount_tables.py  generator_component_card_lists_generator_bounds.py  generator_utils.py
card_lists/generator/output_tables/: kingdom_queries.json  landscapes_other_table.json
card_lists/generator/templates/: amount_getters.cpp  amount_getters.hpp  card_amount_tables.hpp  component.card_lists.generator_bounds.cpp
card_lists/lib/: amount_getters.cpp  amount_getters.hpp  card_amount_tables.hpp  generator_bounds.cpp  generator_bounds.hpp  typedefs.hpp
config/: CMakeLists.txt  amount_getters.cpp  amount_getters.hpp  card_amount_tables.hpp  card_amount_tables.save.hpp  default_expansion_editions.hpp  generator_bounds.cpp  generator_bounds.hpp  kingdom_queries.xlsx  kingdom_regular.xlsx  kingdom_special.xlsx  landscapes_other_queries.xlsx  landscapes_other_table.xlsx  landscapes_regular.xlsx  landscapes_special.xlsx  landscapes_supply_queries.xlsx  landscapes_supply_regular.xlsx  landscapes_supply_special.xlsx  landscapes_types.xlsx  template_vars.json  typedefs.hpp
config/generator/: card_list.xlsx  code_generator_config.json  config_io.py  generated_files.txt  generator_amount_getter.py  generator_base.py  generator_card_amount_tables.py  generator_component_config_generator_bounds.py  generator_utils.py  template_vars.py
config/generator/output_tables/: kingdom_regular.json  kingdom_special.json  landscapes_other_queries.json  landscapes_supply_queries.json  landscapes_supply_regular.json  landscapes_supply_special.json
config/generator/templates/: amount_getters.cpp  amount_getters.hpp  card_amount_tables.hpp  component.config.generator_bounds.cpp
config/lib/: amount_getters.cpp  amount_getters.hpp  card_amount_tables.hpp  default_expansion_editions.hpp  generator_bounds.cpp  generator_bounds.hpp  typedefs.hpp
config_generation/: card_amounts.xlsx  card_list.xlsx  card_list_sandbox.py  code_generation_config.json  config_io.py  generate_config.py  template_vars.py
config_generation.old/: code_generation_config.json  config_io.py  config_io_old.py  generate_config_old.py  template_vars.py  template_vars_old.py
config_generation.old/templates.old/: amount_getters.hpp.mustache  component.config.generator_bounds.cpp.mustache  kingdom_table.mustache  landscapes_table.mustache  tuple_index.mustache
config_generation/templates/: amount_getters.cpp.mustache  amount_getters.hpp.mustache  amount_index.mustache  card_amount_tables.hpp.mustache  default_expansion_editions.hpp.mustache  enum_class.mustache  kingdom_special.mustache  kingdom_table.mustache  landscapes_special.mustache  landscapes_table.mustache  tuple_enum_getters.mustache  tuple_index.mustache
tst/: CMakeLists.txt  component.card_lists.generator_bounds.cpp  component.config.generator_bounds.cpp  unit.config.generator_bounds.cpp  unit.utils.column_major_table.cpp  unit.utils.enum_mask.cpp
utils/: CMakeLists.txt  byte_sequence.hpp  column_major_table.hpp  constrained_product_generator.hpp  enum_mask.hpp  filtered_index_sequence.hpp  format.hpp  math.hpp  result_type.hpp  sized_enum.hpp  tuple.hpp
