find_package(gtest CONFIG REQUIRED)

message(STATUS "Including tests")
enable_testing()

function(gtest)
    set(options)
    set(one_value_args NAME)
    set(multi_value_args LIBS INCLUDE_DIRS)
    cmake_parse_arguments(TEST "${options}" "${one_value_args}" "${multi_value_args}" ${ARGN})
    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
    target_compile_options(${TEST_NAME} PRIVATE -fsanitize=address)
    target_link_options(${TEST_NAME} PRIVATE -fsanitize=address -static-libasan)
    target_include_directories(${TEST_NAME} PRIVATE ${TEST_INCLUDE_DIRS})
    target_link_libraries(${TEST_NAME} GTest::gtest_main GTest::gmock_main ${TEST_LIBS})
    add_test(${TEST_NAME} ${TEST_NAME})
endfunction(gtest)

gtest(NAME unit.utils.enum_mask INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/utils")
gtest(NAME component.card_lists.generator_bounds INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/card_lists/lib" "${PROJECT_SOURCE_DIR}/utils" LIBS card_lists)